# samp-log-core

./: .gitmodules  CMakeLists.txt
include/samplog/: Api.hpp  ILogger.hpp  PluginLogger.hpp
src/: Api.cpp  CMakeLists.txt  LogRotationManager.cpp  Logger.cpp  Logger.hpp
